<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:orientation="vertical">

    <TextView
        android:id="@+id/logIn_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:textSize="25dp"
        android:textStyle="bold"
        android:textColor="@color/metalicYellow"
        android:gravity="center"
        android:layout_marginTop="50dp"></TextView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/tv1_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="10dp"
            android:text="UserName"
            android:textSize="17dp"></TextView>

        <EditText
            android:id="@+id/et1_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv1_name"
            android:layout_alignParentLeft="true"
            android:hint="enter your name"
            android:textSize="17dp"></EditText>

        <!-- PASSWORD -->
        <TextView
            android:id="@+id/tv2_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et1_name"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="10dp"
            android:text="Password"
            android:textSize="17dp"></TextView>

        <EditText
            android:id="@+id/et2_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv2_pwd"
            android:layout_alignParentLeft="true"
            android:inputType="textPassword"
            android:hint="@string/enter_your_password"
            android:textSize="17dp"></EditText>

        <!-- EMAIL -->
        <TextView
            android:id="@+id/tv3_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/et2_pwd"
            android:layout_marginTop="10dp"
            android:text="Email"
            android:textSize="17dp"></TextView>

        <EditText
            android:id="@+id/et3_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv3_email"
            android:layout_alignParentLeft="true"
            android:inputType="textEmailAddress"
            android:hint="enter your email"
            android:textSize="17dp"></EditText>


        <Button
            android:id="@+id/btn_logIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et3_email"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="120dp"
            android:layout_marginEnd="120dp"
            android:layout_marginTop="40dp"
            android:text="log in "
            android:onClick="logIn_to_home"></Button>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp">

        <TextView
            android:id="@+id/tv3_newUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/new_user_let_s_sign_up"
            android:textSize="17dp"
            android:textColor="@color/metalicYellow"
            android:layout_alignParentBottom="true"
            android:onClick="logIn_to_signUp"
            ></TextView>
    </RelativeLayout>

</LinearLayout>