<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/signup_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textSize="25dp"
        android:textStyle="bold"
        android:textColor="@color/metalicYellow"
        android:gravity="center"
        android:layout_marginTop="50dp"></TextView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/tv1_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="10dp"
            android:text="@string/fullname"
            android:textSize="17dp"></TextView>

        <EditText
            android:id="@+id/et1_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv1_name"
            android:layout_alignParentLeft="true"
            android:hint="enter your name"
            android:textSize="17dp"></EditText>

        <!-- EMAIL -->
        <TextView
            android:id="@+id/tv2_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et1_name"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="10dp"
            android:text="Email"
            android:textSize="17dp"></TextView>

        <EditText
            android:id="@+id/et2_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv2_email"
            android:layout_alignParentLeft="true"
            android:inputType="textEmailAddress"
            android:hint="@string/enter_email_address"
            android:textSize="17dp"></EditText>

        <TextView
            android:id="@+id/tv3_setpwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et2_email"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="10dp"
            android:text="Set Password"
            android:textSize="17dp"></TextView>

        <EditText
            android:id="@+id/et3_setpwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv3_setpwd"
            android:layout_alignParentLeft="true"
            android:inputType="textPassword"
            android:textSize="17dp"></EditText>

        <TextView
            android:id="@+id/tv4_cfmpwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et3_setpwd"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="10dp"
            android:text="Re-enter Password"
            android:textSize="17dp"></TextView>

        <EditText
            android:id="@+id/et4_cfmpwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv4_cfmpwd"
            android:layout_alignParentLeft="true"
            android:inputType="text"
            android:hint=""
            android:textSize="17dp"></EditText>

        <Button
            android:id="@+id/btn_signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et4_cfmpwd"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="120dp"
            android:layout_marginEnd="120dp"
            android:layout_marginTop="40dp"
            android:text="sign up"
            android:onClick="signUp_to_logIn"
            ></Button>
    </RelativeLayout>
</LinearLayout>